welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: illegal start of simple expression
	def murNord()=[Boolean] {
                      ^